# types-base_support

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
src/: Base-AngleConvert.cpp  Base-AngleConvert.hpp  Base-JointLimitRangeConvert.cpp  Base-JointLimitRangeConvert.hpp  Base-JointLimitsConvert.hpp  Base-JointState-MODEConvert.cpp  Base-JointState-MODEConvert.hpp  Base-JointStateConvert.cpp  Base-JointStateConvert.hpp  Base-JointTrajectoryConvert.hpp  Base-JointTransform-mConvert.cpp  Base-JointTransform-mConvert.hpp  Base-JointTransformConvert.cpp  Base-JointTransformConvert.hpp  Base-JointTransformVector-mConvert.hpp  Base-JointTransformVectorConvert.hpp  Base-JointsTrajectoryConvert.hpp  Base-LinearAngular6DCommandConvert.cpp  Base-LinearAngular6DCommandConvert.hpp  Base-NamedVector-Base-JointLimitRangeConvert.hpp  Base-NamedVector-Base-JointStateConvert.hpp  Base-NamedVector-Base-JointTrajectoryConvert.hpp  Base-NamedVector-Base-JointTransformConvert.hpp  Base-NamedVector-Base-WrenchConvert.hpp  Base-NamedVector-base-JointTransform-mConvert.hpp  Base-NamedVector-base-Wrench-mConvert.hpp  Base-Pose-mConvert.cpp  Base-Pose-mConvert.hpp  Base-Pose2D-mConvert.cpp  Base-Pose2D-mConvert.hpp  Base-Pose2DConvert.cpp  Base-Pose2DConvert.hpp  Base-PoseConvert.cpp  Base-PoseConvert.hpp  Base-PoseUpdateThresholdConvert.cpp  Base-PoseUpdateThresholdConvert.hpp  Base-PressureConvert.cpp  Base-PressureConvert.hpp  Base-TemperatureConvert.cpp  Base-TemperatureConvert.hpp  (+174 more)
